--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "RS.Snail.JJJ": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "debug"
     }
   }
 }
